--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -103,6 +103,9 @@
       {% if author.goodreads %}
       <li><a href="https://www.goodreads.com/user/show/{{ author.goodreads }}"><i class="fa fa-fw fa-book" aria-hidden="true"></i> Goodreads</a></li>
       {% endif %}
+      {% if author.telegram %}
+      <li><a href="https://t.me/pyneng"><i class="fa fa-fw fa-telegram" aria-hidden="true"></i> Telegram</a></li>
+      {% endif %}
       {% if author.saythanks %}
       <li><a href="https://natenka.github.io/thanks/"><i class="fa fa-fw fa-heart" aria-hidden="true"></i> Say thanks</a></li>
       {% endif %}
