--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -41,7 +41,7 @@
         <li><a href="https://twitter.com/{{ author.twitter }}"><i class="fa fa-fw fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
       {% endif %}
       {% if author.telegram %}
-      <li><a href="https://t.me/pyneng"><i style="font-size:24px" class="fa">&#xf2c6;</i> Telegram</a></li>
+      <li><a href="https://t.me/pyneng"><i class="fa fa-fw fa-tumblr-square" aria-hidden="true"></i> Telegram</a></li>
       {% endif %}
       {% if author.facebook %}
         <li><a href="https://www.facebook.com/{{ author.facebook }}"><i class="fa fa-fw fa-facebook-square" aria-hidden="true"></i> Facebook</a></li>
