--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -107,7 +107,7 @@
       <li><a href="https://www.goodreads.com/user/show/{{ author.goodreads }}"><i class="fa fa-fw fa-book" aria-hidden="true"></i> Goodreads</a></li>
       {% endif %}
       {% if author.saythanks %}
-      <li><a href="https://www.patreon.com/bePatron?u=12246950" data-patreon-widget-type="become-patron-button">Patreon</a><script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script></li>
+      <li><a href="https://natenka.github.io/thanks/"><i class="fa fa-fw fa-heart" aria-hidden="true"></i> Say thanks</a></li>
       {% endif %}
     </ul>
   </div>
