--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -104,7 +104,7 @@
       <li><a href="https://www.goodreads.com/user/show/{{ author.goodreads }}"><i class="fa fa-fw fa-book" aria-hidden="true"></i> Goodreads</a></li>
       {% endif %}
       {% if author.saythanks %}
-      <li><a href="https://natenka.github.io/thanks/"><i class="fa fa-fw fa-heart" aria-hidden="true"></i> Say thanks</a></li>
+      <li><a href="https://patreon.com/natenka"><i class="fa fa-fw fa-heart" aria-hidden="true"></i> Patreon</a></li>
       {% endif %}
     </ul>
   </div>
